# cpp-sensor-processor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  generate_mock_data.py  serve.py
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
data/: mock_sensor_xyz.csv  mock_sensor_xyzrgb.csv
include/sensor_processor/core/: PointCloud.hpp  PointTypes.hpp
include/sensor_processor/io/: CsvReader.hpp  JsonExporter.hpp  Semantic3DReader.hpp
include/sensor_processor/processing/: Processor.hpp  StatisticsObserver.hpp  ThreadPool.hpp
include/sensor_processor/utils/: ArgParser.hpp  Logger.hpp  Timer.hpp
src/: main.cpp
tests/: unit_tests.cpp
vis/: index.html
